--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,10 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += '-parameters'
+}
+
 dependencies {
     implementation "com.linecorp.armeria:armeria:1.18.0"
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.13.3'
